# tauri-plugin-lingua

./: Cargo.toml  README.md  package.json  pnpm-lock.yaml
examples/tauri-app/: README.md  package.json  pnpm-lock.yaml
examples/tauri-app/src/: App.svelte
examples/tauri-app/src-tauri/: Cargo.toml
examples/tauri-app/src-tauri/capabilities/: default.json
examples/tauri-app/src-tauri/src/: lib.rs
examples/tauri-app/src/lib/: LoadingButton.svelte
guest-js/: index.ts
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: compute-language-confidence-values.toml  compute-language-confidence.toml  create-detector-for-all-languages.toml  create-detector-for-languages.toml  detect-language.toml
permissions/schemas/: schema.json
src/: commands.rs  desktop.rs  error.rs  lib.rs  mobile.rs  models.rs
